@@ -1,17 +1,18 @@
 Building SDCC with Borland C++ under Windows
 
-1: Build SDCC under Cygwin as documented in cygwininst.txt (this is
-necessary in order to run all the necessary configuration steps).
-
-2: From the sdcc directory, run the command "make -f Makefile.bcc". This
+1: From the sdcc directory, run the command "make -f Makefile.bcc". This
 should regenerate all the .exe files in the bin directory except for
 sdcdb.exe (which currently doesn't build under Borland C++).
 
-3: If you modify any source files and need to rebuild, be aware that the
+2: If you modify any source files and need to rebuild, be aware that the
 dependancies may not be correctly calculated. The safest option is to
 delete all .obj files and run the build again. From a Cygwin BASH
 prompt, this can easily be done with the commmand:
 
- 'find . -name "*.obj" -print | xargs rm'
+$ find . \( -name '*.obj' -o -name '*.lib' -o -name '*.rul' \) -print -exec rm {} \;
+
+or on Windows NT/2000/XP from the command prompt with the commmand:
+
+del /s *.obj *.lib *.rul
 
 from the sdcc directory.
